testsuite/tests/linear/should_fail/LinearNoExt.stderr

LinearNoExt.hs:3:10: error:
    Enable LinearTypes to allow linear functions
